# rics

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
configs/bundles/: europe.toml  us_federal.toml  us_federal_agencies.toml  us_federal_all.toml  us_federal_committees.toml  us_federal_courts.toml  us_major_cities.toml  us_pro_sports.toml  us_states.toml
configs/sources/ad_hoc/: rough_text.toml
configs/sources/cities/us_major/: chicago.toml  dallas.toml  houston.toml  los_angeles.toml  nyc.toml  philadelphia.toml  phoenix.toml  san_antonio.toml  san_diego.toml  san_jose.toml
configs/sources/economic/: econ_indicators_calendar.toml
configs/sources/elections/europe/: ad.toml  al.toml  am.toml  at.toml  az.toml  ba.toml  be.toml  bg.toml  by.toml  ch.toml  cy.toml  cz.toml  de.toml  dk.toml  ee.toml  es.toml  fi.toml  fr.toml  gb.toml  ge.toml  gr.toml  hr.toml  hu.toml  ie.toml  is.toml  it.toml  li.toml  lt.toml  lu.toml  lv.toml  mc.toml  md.toml  me.toml  mk.toml  mt.toml  nl.toml  no.toml  pl.toml  pt.toml  ro.toml  (+10 more)
configs/sources/elections/us_states/: ak.toml  al.toml  ar.toml  az.toml  ca.toml  co.toml  ct.toml  de.toml  fl.toml  (+41 more)
configs/sources/publishing/: oecd_publications.toml
data/sources/: rough_events.txt
src/: config.rs  fetch.rs  harness.rs  ics.rs  lib.rs  main.rs  model.rs  parser.rs  pipeline.rs  store.rs
tests/: europe_elections.rs  harness.rs  us_federal_core.rs  us_federal_expansion.rs  us_major_cities.rs  us_pro_sports.rs  us_state_elections.rs
tests/fixtures/data/: oecd_fixture.html
tests/fixtures/sources/: oecd_fixture.toml
(+106 files in other folders)
