[package]
name = "rics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.60", features = ["derive"] }
hex = "0.4.3"
glob = "0.3.3"
pdf-extract = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json", "query", "rustls"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
